Fix clang-{tidy,format} issues and add cpplint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,12 @@ set(CMAKE_CXX_STANDARD 20)
 
 include_directories(src)
 add_executable(lox
-  "examples/main.cpp"
-  "src/lox.h"
-  "src/lox.cpp"
-  "src/token_type.h"
-  "src/token.h"
-  "src/token.cpp"
-  "src/scanner.h"
-  "src/scanner.cpp")
+        "examples/main.cpp"
+        "src/driver/lox.h"
+        "src/driver/lox.cpp"
+        "src/scanner/token_type.h"
+        "src/scanner/token.h"
+        "src/scanner/token.cpp"
+        "src/scanner/scanner.h"
+        "src/scanner/scanner.cpp")
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
